[gd_scene load_steps=44 format=3 uid="uid://del72vip3ke8o"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_8shy6"]
[ext_resource type="Texture2D" uid="uid://mq4kbdkwpeo0" path="res://assets/materials/textures/prototype_texture.png" id="1_vnqn7"]
[ext_resource type="PackedScene" uid="uid://caaavx32ka63a" path="res://scenes/user_interface/user_interface.tscn" id="2_3bemu"]
[ext_resource type="Script" path="res://scenes/NetworkHandler.gd" id="7_xpl1k"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_dc3u0"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_2212x"]
sky_material = SubResource("ProceduralSkyMaterial_dc3u0")

[sub_resource type="Environment" id="Environment_puqy4"]
background_mode = 2
sky = SubResource("Sky_2212x")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tr8bl"]
albedo_texture = ExtResource("1_vnqn7")
uv1_scale = Vector3(100, 100, 100)

[sub_resource type="PlaneMesh" id="PlaneMesh_wh4pi"]
material = SubResource("StandardMaterial3D_tr8bl")
size = Vector2(100, 100)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_jb335"]
data = PackedVector3Array(50, 0, 50, -50, 0, 50, 50, 0, -50, -50, 0, 50, -50, 0, -50, 50, 0, -50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pcntk"]
albedo_texture = ExtResource("1_vnqn7")
uv1_scale = Vector3(100, 2, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_a0o6w"]
material = SubResource("StandardMaterial3D_pcntk")
size = Vector2(100, 4)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_lg26e"]
data = PackedVector3Array(50, 0, 2, -50, 0, 2, 50, 0, -2, -50, 0, 2, -50, 0, -2, 50, 0, -2)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_2ffjo"]
data = PackedVector3Array(50, 0, 2, -50, 0, 2, 50, 0, -2, -50, 0, 2, -50, 0, -2, 50, 0, -2)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_daudj"]
data = PackedVector3Array(50, 0, 2, -50, 0, 2, 50, 0, -2, -50, 0, 2, -50, 0, -2, 50, 0, -2)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_2la5w"]
data = PackedVector3Array(50, 0, 2, -50, 0, 2, 50, 0, -2, -50, 0, 2, -50, 0, -2, 50, 0, -2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0ervw"]
albedo_color = Color(0.0745098, 1, 0.0588235, 1)

[sub_resource type="BoxMesh" id="BoxMesh_luj80"]
material = SubResource("StandardMaterial3D_0ervw")
size = Vector3(5, 0.05, 5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_i008j"]
data = PackedVector3Array(-2.5, 0.025, 2.5, 2.5, 0.025, 2.5, -2.5, -0.025, 2.5, 2.5, 0.025, 2.5, 2.5, -0.025, 2.5, -2.5, -0.025, 2.5, 2.5, 0.025, -2.5, -2.5, 0.025, -2.5, 2.5, -0.025, -2.5, -2.5, 0.025, -2.5, -2.5, -0.025, -2.5, 2.5, -0.025, -2.5, 2.5, 0.025, 2.5, 2.5, 0.025, -2.5, 2.5, -0.025, 2.5, 2.5, 0.025, -2.5, 2.5, -0.025, -2.5, 2.5, -0.025, 2.5, -2.5, 0.025, -2.5, -2.5, 0.025, 2.5, -2.5, -0.025, -2.5, -2.5, 0.025, 2.5, -2.5, -0.025, 2.5, -2.5, -0.025, -2.5, 2.5, 0.025, 2.5, -2.5, 0.025, 2.5, 2.5, 0.025, -2.5, -2.5, 0.025, 2.5, -2.5, 0.025, -2.5, 2.5, 0.025, -2.5, -2.5, -0.025, 2.5, 2.5, -0.025, 2.5, -2.5, -0.025, -2.5, 2.5, -0.025, 2.5, 2.5, -0.025, -2.5, -2.5, -0.025, -2.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w08on"]
albedo_color = Color(0.25098, 0.25098, 0.25098, 1)
metallic = 0.82
roughness = 0.7

[sub_resource type="PlaneMesh" id="PlaneMesh_07l7g"]
material = SubResource("StandardMaterial3D_w08on")
size = Vector2(20, 6)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_4jlgs"]
data = PackedVector3Array(10, 0, 3, -10, 0, 3, 10, 0, -3, -10, 0, 3, -10, 0, -3, 10, 0, -3)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_673gg"]
data = PackedVector3Array(10, 0, 3, -10, 0, 3, 10, 0, -3, -10, 0, 3, -10, 0, -3, 10, 0, -3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dv22v"]
albedo_color = Color(0, 0.313726, 0.592157, 1)

[sub_resource type="BoxMesh" id="BoxMesh_h48bj"]
material = SubResource("StandardMaterial3D_dv22v")
size = Vector3(20, 2, 0.2)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ol61m"]
data = PackedVector3Array(-10, 1, 0.1, 10, 1, 0.1, -10, -1, 0.1, 10, 1, 0.1, 10, -1, 0.1, -10, -1, 0.1, 10, 1, -0.1, -10, 1, -0.1, 10, -1, -0.1, -10, 1, -0.1, -10, -1, -0.1, 10, -1, -0.1, 10, 1, 0.1, 10, 1, -0.1, 10, -1, 0.1, 10, 1, -0.1, 10, -1, -0.1, 10, -1, 0.1, -10, 1, -0.1, -10, 1, 0.1, -10, -1, -0.1, -10, 1, 0.1, -10, -1, 0.1, -10, -1, -0.1, 10, 1, 0.1, -10, 1, 0.1, 10, 1, -0.1, -10, 1, 0.1, -10, 1, -0.1, 10, 1, -0.1, -10, -1, 0.1, 10, -1, 0.1, -10, -1, -0.1, 10, -1, 0.1, 10, -1, -0.1, -10, -1, -0.1)

[sub_resource type="BoxMesh" id="BoxMesh_x1ccm"]
material = SubResource("StandardMaterial3D_dv22v")
size = Vector3(0.2, 2, 30)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_4k3r0"]
data = PackedVector3Array(-0.1, 1, 15, 0.1, 1, 15, -0.1, -1, 15, 0.1, 1, 15, 0.1, -1, 15, -0.1, -1, 15, 0.1, 1, -15, -0.1, 1, -15, 0.1, -1, -15, -0.1, 1, -15, -0.1, -1, -15, 0.1, -1, -15, 0.1, 1, 15, 0.1, 1, -15, 0.1, -1, 15, 0.1, 1, -15, 0.1, -1, -15, 0.1, -1, 15, -0.1, 1, -15, -0.1, 1, 15, -0.1, -1, -15, -0.1, 1, 15, -0.1, -1, 15, -0.1, -1, -15, 0.1, 1, 15, -0.1, 1, 15, 0.1, 1, -15, -0.1, 1, 15, -0.1, 1, -15, 0.1, 1, -15, -0.1, -1, 15, 0.1, -1, 15, -0.1, -1, -15, 0.1, -1, 15, 0.1, -1, -15, -0.1, -1, -15)

[sub_resource type="BoxMesh" id="BoxMesh_ybmjh"]
material = SubResource("StandardMaterial3D_dv22v")
size = Vector3(20, 0.1, 30)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_04jbi"]
data = PackedVector3Array(-10, 0.05, 15, 10, 0.05, 15, -10, -0.05, 15, 10, 0.05, 15, 10, -0.05, 15, -10, -0.05, 15, 10, 0.05, -15, -10, 0.05, -15, 10, -0.05, -15, -10, 0.05, -15, -10, -0.05, -15, 10, -0.05, -15, 10, 0.05, 15, 10, 0.05, -15, 10, -0.05, 15, 10, 0.05, -15, 10, -0.05, -15, 10, -0.05, 15, -10, 0.05, -15, -10, 0.05, 15, -10, -0.05, -15, -10, 0.05, 15, -10, -0.05, 15, -10, -0.05, -15, 10, 0.05, 15, -10, 0.05, 15, 10, 0.05, -15, -10, 0.05, 15, -10, 0.05, -15, 10, 0.05, -15, -10, -0.05, 15, 10, -0.05, 15, -10, -0.05, -15, 10, -0.05, 15, 10, -0.05, -15, -10, -0.05, -15)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gpsmu"]
emission_shape = 3
emission_box_extents = Vector3(2.5, 1, 2.5)
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ujrcl"]
albedo_color = Color(0.870588, 0, 0.227451, 1)

[sub_resource type="SphereMesh" id="SphereMesh_3vukw"]
material = SubResource("StandardMaterial3D_ujrcl")
radius = 0.25
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4m8fq"]
albedo_color = Color(0, 0.505882, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_lj6m4"]
material = SubResource("StandardMaterial3D_4m8fq")
size = Vector3(8, 0.1, 8)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_2tgp7"]
bounce = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eagkt"]
albedo_color = Color(1, 1, 0, 1)
metallic = 0.38
roughness = 0.39

[sub_resource type="SphereMesh" id="SphereMesh_08fxo"]
material = SubResource("StandardMaterial3D_eagkt")
radius = 1.0
height = 2.0

[sub_resource type="SphereShape3D" id="SphereShape3D_0eirp"]
radius = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g52un"]
albedo_color = Color(0, 1, 0.2, 1)
metallic = 0.38
roughness = 0.39

[sub_resource type="SphereMesh" id="SphereMesh_7klff"]
material = SubResource("StandardMaterial3D_g52un")
radius = 1.0
height = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_umfmo"]
albedo_color = Color(0, 0.0666667, 1, 1)
metallic = 0.38
roughness = 0.39

[sub_resource type="SphereMesh" id="SphereMesh_1xvl5"]
material = SubResource("StandardMaterial3D_umfmo")
radius = 1.0
height = 2.0

[node name="Game" type="Node3D"]
script = ExtResource("1_8shy6")

[node name="UserInterface" parent="." instance=ExtResource("2_3bemu")]

[node name="NetworkHandler" type="Node" parent="."]
script = ExtResource("7_xpl1k")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="NetworkHandler"]
_spawnable_scenes = PackedStringArray("res://scenes/player/player.tscn")
spawn_path = NodePath("../NetworkSpawner")

[node name="NetworkSpawner" type="Node" parent="NetworkHandler"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_puqy4")

[node name="Map" type="Node3D" parent="."]

[node name="Floor" type="MeshInstance3D" parent="Map"]
mesh = SubResource("PlaneMesh_wh4pi")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Map/Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_jb335")

[node name="WallN" type="MeshInstance3D" parent="Map"]
transform = Transform3D(-1, -3.82137e-15, 8.74228e-08, -8.74228e-08, 4.37114e-08, -1, 0, -1, -4.37114e-08, 0, 2, 50)
mesh = SubResource("PlaneMesh_a0o6w")

[node name="StaticBody3D" type="StaticBody3D" parent="Map/WallN"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/WallN/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_lg26e")

[node name="WallW" type="MeshInstance3D" parent="Map"]
transform = Transform3D(-4.37114e-08, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, -4.37114e-08, 1.91069e-15, 50, 2, 0)
mesh = SubResource("PlaneMesh_a0o6w")

[node name="StaticBody3D" type="StaticBody3D" parent="Map/WallW"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/WallW/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_2ffjo")

[node name="WallE" type="MeshInstance3D" parent="Map"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, -50, 2, 0)
mesh = SubResource("PlaneMesh_a0o6w")

[node name="StaticBody3D" type="StaticBody3D" parent="Map/WallE"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/WallE/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_daudj")

[node name="WallS" type="MeshInstance3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 2, -50)
mesh = SubResource("PlaneMesh_a0o6w")

[node name="StaticBody3D" type="StaticBody3D" parent="Map/WallS"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/WallS/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_2la5w")

[node name="Ramp" type="MeshInstance3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 0.928083, -0.372372, 0, 0.372372, 0.928083, -5.62117, 0.902635, -0.445016)
mesh = SubResource("BoxMesh_luj80")

[node name="StaticBody3D" type="StaticBody3D" parent="Map/Ramp"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/Ramp/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_i008j")

[node name="BallPool" type="Node3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 34, 0, -41)

[node name="RampOutside" type="MeshInstance3D" parent="Map/BallPool"]
transform = Transform3D(1, 0, 0, 0, 0.93358, -0.358368, 0, 0.358368, 0.93358, 5.008, 1.024, 24.8168)
mesh = SubResource("PlaneMesh_07l7g")

[node name="StaticBody3D" type="StaticBody3D" parent="Map/BallPool/RampOutside"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/BallPool/RampOutside/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_4jlgs")

[node name="RampInside" type="MeshInstance3D" parent="Map/BallPool"]
transform = Transform3D(1, 0, 0, 0, 0.93358, 0.358368, 0, -0.358368, 0.93358, 5.008, 1.024, 19.1597)
mesh = SubResource("PlaneMesh_07l7g")

[node name="StaticBody3D" type="StaticBody3D" parent="Map/BallPool/RampInside"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/BallPool/RampInside/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_673gg")

[node name="North" type="MeshInstance3D" parent="Map/BallPool"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1.00859, -8)
mesh = SubResource("BoxMesh_h48bj")

[node name="StaticBody3D" type="StaticBody3D" parent="Map/BallPool/North"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/BallPool/North/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_ol61m")

[node name="South" type="MeshInstance3D" parent="Map/BallPool"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1.00859, 22)
mesh = SubResource("BoxMesh_h48bj")

[node name="StaticBody3D" type="StaticBody3D" parent="Map/BallPool/South"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/BallPool/South/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_ol61m")

[node name="West" type="MeshInstance3D" parent="Map/BallPool"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 1.00859, 7)
mesh = SubResource("BoxMesh_x1ccm")

[node name="StaticBody3D" type="StaticBody3D" parent="Map/BallPool/West"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/BallPool/West/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_4k3r0")

[node name="East" type="MeshInstance3D" parent="Map/BallPool"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 1.00859, 7)
mesh = SubResource("BoxMesh_x1ccm")

[node name="StaticBody3D" type="StaticBody3D" parent="Map/BallPool/East"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/BallPool/East/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_4k3r0")

[node name="Floor" type="MeshInstance3D" parent="Map/BallPool"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.00858998, 7)
mesh = SubResource("BoxMesh_ybmjh")

[node name="StaticBody3D" type="StaticBody3D" parent="Map/BallPool/Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/BallPool/Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_04jbi")

[node name="Particles" type="Node3D" parent="Map/BallPool"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 3.89629, -6)

[node name="GPUParticles3D" type="GPUParticles3D" parent="Map/BallPool/Particles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.958031, 3.05462, -0.817005)
amount = 100
lifetime = 6.0
collision_base_size = 0.25
visibility_aabb = AABB(-12.81, -7, -2.04, 15, 8, 15)
process_material = SubResource("ParticleProcessMaterial_gpsmu")
draw_pass_1 = SubResource("SphereMesh_3vukw")

[node name="Mesh" type="MeshInstance3D" parent="Map/BallPool/Particles"]
transform = Transform3D(0.707107, -0.122788, -0.696364, 0, 0.984808, -0.173648, 0.707107, 0.122788, 0.696364, 1.5, 0.348989, -1.5)
mesh = SubResource("BoxMesh_lj6m4")
skeleton = NodePath("../..")

[node name="GPUParticlesCollisionBox3D" type="GPUParticlesCollisionBox3D" parent="Map/BallPool/Particles/Mesh"]
size = Vector3(8, 0.1, 8)

[node name="GPUParticlesCollisionBox3D2" type="GPUParticlesCollisionBox3D" parent="Map/BallPool/Particles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.39684, -3.85829, 4.48191)
size = Vector3(14.9378, 0.1, 15.2767)

[node name="Ball01" type="RigidBody3D" parent="Map/BallPool"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.98373, 4.78139)
physics_material_override = SubResource("PhysicsMaterial_2tgp7")

[node name="Ball01" type="MeshInstance3D" parent="Map/BallPool/Ball01"]
mesh = SubResource("SphereMesh_08fxo")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/BallPool/Ball01"]
shape = SubResource("SphereShape3D_0eirp")

[node name="Ball02" type="RigidBody3D" parent="Map/BallPool"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 2.98373, -4.10038)
physics_material_override = SubResource("PhysicsMaterial_2tgp7")

[node name="Ball01" type="MeshInstance3D" parent="Map/BallPool/Ball02"]
mesh = SubResource("SphereMesh_08fxo")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/BallPool/Ball02"]
shape = SubResource("SphereShape3D_0eirp")

[node name="Ball03" type="RigidBody3D" parent="Map/BallPool"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.31937, 2.98373, 13.1511)
physics_material_override = SubResource("PhysicsMaterial_2tgp7")

[node name="Ball01" type="MeshInstance3D" parent="Map/BallPool/Ball03"]
mesh = SubResource("SphereMesh_08fxo")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/BallPool/Ball03"]
shape = SubResource("SphereShape3D_0eirp")

[node name="Ball04" type="RigidBody3D" parent="Map/BallPool"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.17451, 2.98373, 9.43065)
physics_material_override = SubResource("PhysicsMaterial_2tgp7")

[node name="Ball01" type="MeshInstance3D" parent="Map/BallPool/Ball04"]
mesh = SubResource("SphereMesh_7klff")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/BallPool/Ball04"]
shape = SubResource("SphereShape3D_0eirp")

[node name="Ball05" type="RigidBody3D" parent="Map/BallPool"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.99323, 2.98373, 4.146)
physics_material_override = SubResource("PhysicsMaterial_2tgp7")

[node name="Ball01" type="MeshInstance3D" parent="Map/BallPool/Ball05"]
mesh = SubResource("SphereMesh_7klff")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/BallPool/Ball05"]
shape = SubResource("SphereShape3D_0eirp")

[node name="Ball06" type="RigidBody3D" parent="Map/BallPool"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.609207, 2.98373, -3.58553)
physics_material_override = SubResource("PhysicsMaterial_2tgp7")

[node name="Ball01" type="MeshInstance3D" parent="Map/BallPool/Ball06"]
mesh = SubResource("SphereMesh_7klff")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/BallPool/Ball06"]
shape = SubResource("SphereShape3D_0eirp")

[node name="Ball07" type="RigidBody3D" parent="Map/BallPool"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.19998, 2.98373, 14.6659)
physics_material_override = SubResource("PhysicsMaterial_2tgp7")

[node name="Ball01" type="MeshInstance3D" parent="Map/BallPool/Ball07"]
mesh = SubResource("SphereMesh_1xvl5")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/BallPool/Ball07"]
shape = SubResource("SphereShape3D_0eirp")

[node name="Ball08" type="RigidBody3D" parent="Map/BallPool"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.48569, 2.49775, 17.7322)
physics_material_override = SubResource("PhysicsMaterial_2tgp7")

[node name="Ball01" type="MeshInstance3D" parent="Map/BallPool/Ball08"]
mesh = SubResource("SphereMesh_1xvl5")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/BallPool/Ball08"]
shape = SubResource("SphereShape3D_0eirp")

[node name="Ball09" type="RigidBody3D" parent="Map/BallPool"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0299339, 2.49775, 0.561821)
physics_material_override = SubResource("PhysicsMaterial_2tgp7")

[node name="Ball01" type="MeshInstance3D" parent="Map/BallPool/Ball09"]
mesh = SubResource("SphereMesh_1xvl5")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/BallPool/Ball09"]
shape = SubResource("SphereShape3D_0eirp")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.549461, -0.675258, 0.492056, 0.228772, 0.688006, 0.688703, -0.80359, -0.265847, 0.532512, 0, 0, 0)
light_energy = 0.8
shadow_enabled = true
directional_shadow_mode = 1
directional_shadow_split_1 = 0.15

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -18.5899, 5.24324, 18.8851)

[connection signal="online_connect_server" from="UserInterface" to="NetworkHandler" method="_on_UserInterface_online_connect_server"]
[connection signal="online_create_host" from="UserInterface" to="NetworkHandler" method="_on_UserInterface_online_create_host"]
[connection signal="play_game" from="UserInterface" to="." method="_on_user_interface_play_game"]
[connection signal="tree_exited" from="NetworkHandler" to="NetworkHandler" method="_on_tree_exited"]
